packages/coln-compiler/test/golden/graph-of-graphs.output
-- elaborated
global entry named Graph
in mode: Conjunctive
type: Theory
value: sig
  V : Set
  E : V -> V -> Set
end
realm named GraphRealm
generators: node
  V = rel []
  E = rel [a : GraphRealm.V [], b : GraphRealm.V []]
end
lowered: flatrealm
  entities
    table ℜ.V := []
    table ℜ.E := [.a : ℜ.V, .b : ℜ.V]
  end
  rules
    enforced ℜ.V.foreignKey := ℜ.V [] ⊢ ⊤
    enforced ℜ.E.foreignKey a b := ℜ.E [
      .a ↦ a,
      .b ↦ b
    ] ⊢ a ∈ ℜ.V [] ∧ b ∈ ℜ.V []
  end
end

-- messages

debug[D0316]: cannot use inductively bound variable in a conjunctive context
15 |   V : G0.V -> G1.V
15 |               ^^

error[E0314]: no such variable Graph/hom in scope
22 |   action : (v0 : base.V) -> (v1 : base.V) -> base.E v0 v1 -> Graph/hom (fiber v0) (fiber v1)
22 |                                                              ^^^^^^^^^

error[E0314]: no such variable GraphOfGraphs in scope
25 | realm GraphOfGraphsRealm @ GraphOfGraphs
25 |                            ^^^^^^^^^^^^^
